--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -14,6 +14,8 @@
   <dd><%= @product.unidade_comercial %></dd>
   <dt><strong><%= model_class.human_attribute_name("codigo NCM") %>:</strong></dt>
   <dd><%= @product.codigo_ncm %></dd>
+  <dt><strong><%= model_class.human_attribute_name("Cest") %>:</strong></dt>
+  <dd><%= @product.cest %></dd>
 
 </dl>
 
