--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -56,6 +56,14 @@
   </div>
 
   <div class="form-group">
+  <%= f.label 'Cest', :class => 'control-label col-lg-2' %>
+  <div class="col-lg-2">
+    <%= f.text_field :cest, :class => 'form-control', id: 'cest', :maxlength=>"7" %>
+  </div>
+  <%=f.error_span(:cest) %>
+</div>
+
+  <div class="form-group">
     <div class="col-lg-offset-2 col-lg-10">
 
       <%= f.submit 'Salvar', data: { disable_with: "Processando..." }, :class => 'btn btn-primary' %>
